feat: add new api
